--- a/Vistaaa/AppShell.xaml
+++ b/Vistaaa/AppShell.xaml
@@ -4,12 +4,61 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:Vistaaa"
-    Shell.FlyoutBehavior="Disabled"
-    Title="Vistaaa">
-
-    <ShellContent
+    Shell.FlyoutBehavior="Flyout" Shell.NavBarHasShadow="True" NavigationPage.BackButtonTitle="Wstecz" 
+    Title="Vistaaa - serwis ogłoszeniowy" BackgroundColor="#0FA">
+    <Shell.FlyoutBackdrop>
+        <LinearGradientBrush StartPoint="0,0"
+                             EndPoint="1,1">
+            <GradientStop Color="#8A2387"
+                          Offset="0.1" />
+            <GradientStop Color="#E94057"
+                          Offset="0.6" />
+            <GradientStop Color="#F27121"
+                          Offset="1.0" />
+        </LinearGradientBrush>
+    </Shell.FlyoutBackdrop>
+    <Shell.FlyoutHeaderTemplate>
+        <DataTemplate>
+            <Label Text="Vistaaa" FontSize="25"                       
+                       FontAttributes="Bold"
+                       HorizontalTextAlignment="Center"
+                       VerticalTextAlignment="Center" />
+        </DataTemplate>
+    </Shell.FlyoutHeaderTemplate>
+    <Shell.FlyoutFooterTemplate>
+        <DataTemplate>
+            <VerticalStackLayout Padding="10">
+                <Label Text="© 2024 MH Corporation." FontSize="13"/>
+                <Label Text="Wszelkie prawa zastrzeżone." FontSize="13"/>
+                <Label Text="Made with love by Windows Vista Lover!" FontSize="13"/>
+            </VerticalStackLayout>
+        </DataTemplate>
+    </Shell.FlyoutFooterTemplate>
+    <!--<ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+        Route="MainPage">       
+    </ShellContent>-->
+    <FlyoutItem FlyoutDisplayOptions="AsMultipleItems" Title="aaaa">
+        
+        <ShellContent Title="Strona główna"
+                      Icon="monkey.png"
+                      ContentTemplate="{DataTemplate local:MainPage}" />
+        <Tab Title="Oferty pracy"
+             Icon="paw.png">
+            <ShellContent Title="Najnowsze"
+                          Icon="cat.png" 
+                          ContentTemplate="{DataTemplate local:MainPage}" Appearing="ShellContent_Appearing"/>
+            <ShellContent Title="Ostatnio oglądane"
+                          Icon="dog.png"
+                          Route="dogs"
+                          ContentTemplate="{DataTemplate local:MainPage}" Appearing="ShellContent_Appearing2"/>
+        </Tab>
+        <ShellContent Title="Profil"
+                      Icon="bear.png"
+                      ContentTemplate="{DataTemplate local:MainPage}" />
+    </FlyoutItem>
+    <ShellContent Title="Vistaaa - informacje"
+                  Icon="info.png"
+                  ContentTemplate="{DataTemplate local:MainPage}" />
 </Shell>
