--- a/Vistaaa/MainPage.xaml
+++ b/Vistaaa/MainPage.xaml
@@ -4,33 +4,46 @@
              x:Class="Vistaaa.MainPage">
 
     <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
+        <VerticalStackLayout MaximumWidthRequest="1000"
+            Padding="10,0"
             Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
-            <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+            <SearchBar Placeholder="Wyszukaj"/>
+            <CollectionView x:Name="collectionView">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Border StrokeThickness="1" Padding="6">
+                            <Border.StrokeShape>
+                                <RoundRectangle CornerRadius="10"/>
+                            </Border.StrokeShape>
+                            <VerticalStackLayout Margin="6">
+                                <Label Text="{Binding Title}"/>
+                                <Button Text="Szczegóły" Clicked="Button_Clicked"/>
+                                <FlyoutBase.ContextFlyout>
+                                    <MenuFlyout>
+                                        <MenuFlyoutItem Text="Usuń"/>
+                                        <MenuFlyoutSeparator/>
+                                        <MenuFlyoutSubItem Text="Zmień">
+                                            <MenuFlyoutItem Text="Zmień nazwę"/>
+                                            <MenuFlyoutItem Text="Zmień opis"/>
+                                        </MenuFlyoutSubItem>
+                                    </MenuFlyout>
+                                </FlyoutBase.ContextFlyout>
+                            </VerticalStackLayout>
+                            <Border.Shadow>
+                                <Shadow  Brush="#BBB"
+                                    Offset="3, 3"
+                                    Radius="5"
+                                    Opacity="0.9" />
+                            </Border.Shadow>
+                        </Border>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout Orientation="Vertical"
+                        Span="2" VerticalItemSpacing="8" HorizontalItemSpacing="8" />
+                </CollectionView.ItemsLayout>
+            </CollectionView>
+            <Button Clicked="Button_Clicked_1"/>
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
