--- a/Vistaaa/MainPage.xaml
+++ b/Vistaaa/MainPage.xaml
@@ -2,22 +2,46 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Vistaaa.MainPage">
-
     <ScrollView>
         <VerticalStackLayout MaximumWidthRequest="1000"
             Padding="10,0"
             Spacing="25">
-            <SearchBar Placeholder="Wyszukaj"/>
-            <CollectionView x:Name="collectionView">
-                <CollectionView.ItemTemplate>
+            <SearchBar Placeholder="Wyszukaj" x:Name="searchBar" TextChanged="SearchBar_TextChanged"/>
+            <Picker/>
+            <ActivityIndicator IsRunning="True" x:Name="loading" />
+            <!--<RefreshView RefreshColor="Yellow">-->
+                <CollectionView x:Name="collectionView">
+                    <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Border StrokeThickness="1" Padding="6">
+                        <StackLayout>
+                            <Border HeightRequest="30" Padding="10, 5" BackgroundColor="OrangeRed" StrokeThickness="0" TranslationX="-10" HorizontalOptions="End" ZIndex="999">
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="15"/>
+                                </Border.StrokeShape>
+                                <Label Text="{Binding Path=CreationDate, StringFormat='{0:d MMM yyyy}'}" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"/>
+                            </Border>
+                            <Border StrokeThickness="1" Margin="0, -20, 0, 0">
                             <Border.StrokeShape>
                                 <RoundRectangle CornerRadius="10"/>
                             </Border.StrokeShape>
-                            <VerticalStackLayout Margin="6">
-                                <Label Text="{Binding Title}"/>
-                                <Button Text="Szczegóły" Clicked="Button_Clicked"/>
+                            <StackLayout Margin="10, 5" >
+                                <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold"/>
+                                <Label Text="{Binding Path=CompanyName, StringFormat='przez: {0}'}" FontSize="13" FontAttributes="Bold"/>
+                                    <Label TextColor="DodgerBlue" Text="{Binding Path=HighestSalary, StringFormat='do {0:N2} zł'}" FontSize="13" FontAttributes="Bold"/>
+                                    <FlexLayout Wrap="Wrap">
+                                        <Label Opacity="0.8">
+                                            <Label.Text>
+                                                <MultiBinding StringFormat="{}{0}  &#x2022; {1}  &#x2022; {2} &#x2022; {3} &#x2022; {4} ">
+                                                    <Binding Path="PositionName" />
+                                                    <Binding Path="PositionLevel" />
+                                                    <Binding Path="ContractType" />
+                                                    <Binding Path="Employment" />
+                                                    <Binding Path="WorkType" />
+                                                </MultiBinding>
+                                            </Label.Text>
+                                        </Label>
+                                    </FlexLayout>
+                                <Button Margin="0, 10, 0, 0" Text="Szczegóły" BackgroundColor="DodgerBlue" FontAttributes="Bold"  TextColor="White" HorizontalOptions="Center" Clicked="Button_Clicked"/>
                                 <FlyoutBase.ContextFlyout>
                                     <MenuFlyout>
                                         <MenuFlyoutItem Text="Usuń"/>
@@ -28,21 +52,60 @@
                                         </MenuFlyoutSubItem>
                                     </MenuFlyout>
                                 </FlyoutBase.ContextFlyout>
-                            </VerticalStackLayout>
-                            <Border.Shadow>
-                                <Shadow  Brush="#BBB"
+                            </StackLayout>
+                            <!--<Border.Shadow>
+                                    <Shadow  Brush="#BBB"
                                     Offset="3, 3"
                                     Radius="5"
                                     Opacity="0.9" />
-                            </Border.Shadow>
+                                </Border.Shadow>-->
                         </Border>
+                        </StackLayout>
+                        
+
                     </DataTemplate>
-                </CollectionView.ItemTemplate>
-                <CollectionView.ItemsLayout>
-                    <GridItemsLayout Orientation="Vertical"
-                        Span="2" VerticalItemSpacing="8" HorizontalItemSpacing="8" />
-                </CollectionView.ItemsLayout>
+                    </CollectionView.ItemTemplate>
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout Orientation="Vertical"
+                        Span="2" VerticalItemSpacing="10" HorizontalItemSpacing="10" />
+                    </CollectionView.ItemsLayout>
+                <CollectionView.Footer>
+                    <HorizontalStackLayout x:Name="test">
+                        <Label Text="Stronicowanie"/>
+                    </HorizontalStackLayout>
+
+                </CollectionView.Footer>
             </CollectionView>
+            <!--</RefreshView>-->
+            <StackLayout HeightRequest="50" WidthRequest="50" BackgroundColor="Orange">
+                <Grid x:Name="counter">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="50"/>
+                    </Grid.RowDefinitions>
+                    <Label Text="9" FontSize="35" FontAttributes="Bold" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="8" FontSize="35" FontAttributes="Bold" Grid.Row="1" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="7" FontSize="35" FontAttributes="Bold" Grid.Row="2" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="6" FontSize="35" FontAttributes="Bold" Grid.Row="3" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="5" FontSize="35" FontAttributes="Bold" Grid.Row="4" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="4" FontSize="35" FontAttributes="Bold" Grid.Row="5" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="3" FontSize="35" FontAttributes="Bold" Grid.Row="6" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="2" FontSize="35" FontAttributes="Bold" Grid.Row="7" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="1" FontSize="35" FontAttributes="Bold" Grid.Row="8" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                    <Label Text="0" FontSize="35" FontAttributes="Bold" Grid.Row="9" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
+                </Grid>
+            </StackLayout>
             <Button Clicked="Button_Clicked_1"/>
         </VerticalStackLayout>
     </ScrollView>
