--- a/Vistaaa/MainPage.xaml
+++ b/Vistaaa/MainPage.xaml
@@ -21,12 +21,12 @@
                                 <Label Text="{Binding Path=CreationDate, StringFormat='{0:d MMM yyyy}'}" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"/>
                             </Border>
                             <Border StrokeThickness="1" Margin="0, -20, 0, 0">
-                            <Border.StrokeShape>
-                                <RoundRectangle CornerRadius="10"/>
-                            </Border.StrokeShape>
-                            <StackLayout Margin="10, 5" >
-                                <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold"/>
-                                <Label Text="{Binding Path=CompanyName, StringFormat='przez: {0}'}" FontSize="13" FontAttributes="Bold"/>
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="10"/>
+                                </Border.StrokeShape>
+                                <StackLayout Margin="10, 5" >
+                                    <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold" Margin="0, 10, 0, 0"/>
+                                    <Label Text="{Binding Path=CompanyName, StringFormat='przez: {0}'}" FontSize="13" FontAttributes="Bold"/>
                                     <Label TextColor="DodgerBlue" Text="{Binding Path=HighestSalary, StringFormat='do {0:N2} zł'}" FontSize="13" FontAttributes="Bold"/>
                                     <FlexLayout Wrap="Wrap">
                                         <Label Opacity="0.8">
@@ -41,28 +41,26 @@
                                             </Label.Text>
                                         </Label>
                                     </FlexLayout>
-                                <Button Margin="0, 10, 0, 0" Text="Szczegóły" BackgroundColor="DodgerBlue" FontAttributes="Bold"  TextColor="White" HorizontalOptions="Center" Clicked="Button_Clicked"/>
-                                <FlyoutBase.ContextFlyout>
-                                    <MenuFlyout>
-                                        <MenuFlyoutItem Text="Usuń"/>
-                                        <MenuFlyoutSeparator/>
-                                        <MenuFlyoutSubItem Text="Zmień">
-                                            <MenuFlyoutItem Text="Zmień nazwę"/>
-                                            <MenuFlyoutItem Text="Zmień opis"/>
-                                        </MenuFlyoutSubItem>
-                                    </MenuFlyout>
-                                </FlyoutBase.ContextFlyout>
-                            </StackLayout>
-                            <!--<Border.Shadow>
+                                    <Button Margin="0, 10, 0, 0" Text="Szczegóły" BackgroundColor="DodgerBlue" FontAttributes="Bold"  TextColor="White" HorizontalOptions="Center" Clicked="Button_Clicked"/>
+                                    <FlyoutBase.ContextFlyout>
+                                        <MenuFlyout>
+                                            <MenuFlyoutItem Text="Usuń"/>
+                                            <MenuFlyoutSeparator/>
+                                            <MenuFlyoutSubItem Text="Zmień">
+                                                <MenuFlyoutItem Text="Zmień nazwę"/>
+                                                <MenuFlyoutItem Text="Zmień opis"/>
+                                            </MenuFlyoutSubItem>
+                                        </MenuFlyout>
+                                    </FlyoutBase.ContextFlyout>
+                                </StackLayout>
+                                <!--<Border.Shadow>
                                     <Shadow  Brush="#BBB"
                                     Offset="3, 3"
                                     Radius="5"
                                     Opacity="0.9" />
                                 </Border.Shadow>-->
-                        </Border>
+                            </Border>
                         </StackLayout>
-                        
-
                     </DataTemplate>
                     </CollectionView.ItemTemplate>
                     <CollectionView.ItemsLayout>
@@ -70,43 +68,13 @@
                         Span="2" VerticalItemSpacing="10" HorizontalItemSpacing="10" />
                     </CollectionView.ItemsLayout>
                 <CollectionView.Footer>
-                    <HorizontalStackLayout x:Name="test">
-                        <Label Text="Stronicowanie"/>
+                    <HorizontalStackLayout x:Name="test" HorizontalOptions="Center">
+                        <Button x:Name="previousPage" Clicked="PreviousPage_Clicked" Text="&lt;"/>
+                        <Button x:Name="nextPage" Clicked="NextPage_Clicked" Text="&gt;"/>
                     </HorizontalStackLayout>
-
                 </CollectionView.Footer>
             </CollectionView>
             <!--</RefreshView>-->
-            <StackLayout HeightRequest="50" WidthRequest="50" BackgroundColor="Orange">
-                <Grid x:Name="counter">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                        <RowDefinition Height="50"/>
-                    </Grid.RowDefinitions>
-                    <Label Text="9" FontSize="35" FontAttributes="Bold" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="8" FontSize="35" FontAttributes="Bold" Grid.Row="1" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="7" FontSize="35" FontAttributes="Bold" Grid.Row="2" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="6" FontSize="35" FontAttributes="Bold" Grid.Row="3" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="5" FontSize="35" FontAttributes="Bold" Grid.Row="4" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="4" FontSize="35" FontAttributes="Bold" Grid.Row="5" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="3" FontSize="35" FontAttributes="Bold" Grid.Row="6" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="2" FontSize="35" FontAttributes="Bold" Grid.Row="7" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="1" FontSize="35" FontAttributes="Bold" Grid.Row="8" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                    <Label Text="0" FontSize="35" FontAttributes="Bold" Grid.Row="9" VerticalTextAlignment="Center" HorizontalTextAlignment="Center"/>
-                </Grid>
-            </StackLayout>
-            <Button Clicked="Button_Clicked_1"/>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
