--- a/Vistaaa/Views/AdvertisementPage.xaml
+++ b/Vistaaa/Views/AdvertisementPage.xaml
@@ -3,10 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Vistaaa.Views.AdvertisementPage"
              Title="AdvertisementPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <ScrollView>
+            
+        </ScrollView>
+        <StackLayout Grid.Row="1">
+            <HorizontalStackLayout HorizontalOptions="Center">
+                <Button Text="Aplikuj"/>
+                <Button Text="Zapisz"/>
+            </HorizontalStackLayout>
+        </StackLayout>
+    </Grid>
 </ContentPage>
