--- a/Vistaaa/MainPage.xaml
+++ b/Vistaaa/MainPage.xaml
@@ -1,24 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Vistaaa.MainPage">
+             x:Class="Vistaaa.MainPage" Title="Oferty pracy">
     <ScrollView x:Name="AdvertisementScrollView">
         <VerticalStackLayout MaximumWidthRequest="1000"
             Padding="10,0"
             Spacing="25">
             <SearchBar Placeholder="Wyszukaj" x:Name="searchBar" TextChanged="SearchBar_TextChanged"/>
-            <Picker/>
+            <HorizontalStackLayout Spacing="15" HorizontalOptions="End">
+                <Label Text="Sortuj:" VerticalOptions="Center"/>
+                <Picker>
+                    <Picker.Items>
+                        <x:String>Od najnowszych</x:String>
+                        <x:String>Od najpopularniejszych</x:String>
+                    </Picker.Items>
+                </Picker>
+            </HorizontalStackLayout>
+            
             <ActivityIndicator IsRunning="True" x:Name="loading" />
             <!--<RefreshView RefreshColor="Yellow">-->
                 <CollectionView x:Name="AdvertisementCollectionView">
                     <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
-                            <Border HeightRequest="30" Padding="10, 5" BackgroundColor="OrangeRed" StrokeThickness="0" TranslationX="-10" HorizontalOptions="End" ZIndex="999">
+                            <Border HeightRequest="30" Padding="10, 5" BackgroundColor="SeaGreen" StrokeThickness="0" TranslationX="-10" HorizontalOptions="End" ZIndex="999">
                                 <Border.StrokeShape>
                                     <RoundRectangle CornerRadius="15"/>
                                 </Border.StrokeShape>
-                                <Label Text="{Binding Path=CreationDate, StringFormat='{0:d MMM yyyy}'}" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"/>
+                                <Label Text="{Binding Path=CreationDate, StringFormat='{0:d MMM yyyy}'}" TextColor="White" FontSize="13" FontAttributes="Bold" VerticalOptions="Center"/>
                             </Border>
                             <Border StrokeThickness="1" Margin="0, -20, 0, 0">
                                 <Border.StrokeShape>
@@ -27,7 +36,7 @@
                                 <StackLayout Margin="10, 5" >
                                     <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold" Margin="0, 10, 0, 0"/>
                                     <Label Text="{Binding Path=CompanyName, StringFormat='przez: {0}'}" FontSize="13" FontAttributes="Bold"/>
-                                    <Label TextColor="DodgerBlue" Text="{Binding Path=HighestSalary, StringFormat='do {0:N2} zł'}" FontSize="13" FontAttributes="Bold"/>
+                                    <Label TextColor="#B566FF" Text="{Binding Path=HighestSalary, StringFormat='do {0:N2} zł'}" FontSize="13" FontAttributes="Bold"/>
                                     <FlexLayout Wrap="Wrap">
                                         <Label Opacity="0.8">
                                             <Label.Text>
