--- a/Vistaaa/Resources/Styles/Colors.xaml
+++ b/Vistaaa/Resources/Styles/Colors.xaml
@@ -6,8 +6,8 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
-    <Color x:Key="Primary">#1E90FF</Color>
-    <Color x:Key="PrimaryDark">#ac99ea</Color>
+    <Color x:Key="Primary">#2E8B57</Color>
+    <Color x:Key="PrimaryDark">#2E8B57</Color>
     <Color x:Key="PrimaryDarkText">#242424</Color>
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="SecondaryDarkText">#FFF</Color>
