--- a/Vistaaa/Views/ProfilePage.xaml
+++ b/Vistaaa/Views/ProfilePage.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Vistaaa.Views.ProfilePage"
-             Title="ProfilePage">
+             Title="Profil">
     <Grid>
         <VerticalStackLayout HorizontalOptions="Center" VerticalOptions="Center" Spacing="20" MaximumWidthRequest="300">
             <Label Text="Witaj w Vistaaa! Wygląda na to, że nie jesteś zalogowany." HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="20"/>
             <Label Text="Zaloguj się, by móc w pełni korzystać z systemu Vistaaa."/>
-            <Button Text="Zaloguj się"/>
+            <Button Text="Zaloguj się" Clicked="Button_Clicked"/>
             <Label Text="Nie masz jeszcze konta? Zarejestruj się za darmo."/>
             <Button Text="Zarejestruj się"/>
         </VerticalStackLayout>
