--- a/Vistaaa/MainPage.xaml
+++ b/Vistaaa/MainPage.xaml
@@ -6,7 +6,7 @@
         <VerticalStackLayout MaximumWidthRequest="1000"
             Padding="10,0"
             Spacing="25">
-            <SearchBar Placeholder="Wyszukaj" x:Name="searchBar" TextChanged="SearchBar_TextChanged"/>
+            <SearchBar Placeholder="Wyszukaj" x:Name="searchBar" TextChanged="SearchBar_TextChanged" IsTextPredictionEnabled="True"/>
             <HorizontalStackLayout Spacing="15" HorizontalOptions="End">
                 <Label Text="Sortuj:" VerticalOptions="Center"/>
                 <Picker>
@@ -36,7 +36,7 @@
                                 <StackLayout Margin="10, 5" >
                                     <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold" Margin="0, 10, 0, 0"/>
                                     <Label Text="{Binding Path=CompanyName, StringFormat='przez: {0}'}" FontSize="13" FontAttributes="Bold"/>
-                                    <Label TextColor="#B566FF" Text="{Binding Path=HighestSalary, StringFormat='do {0:N2} zł'}" FontSize="13" FontAttributes="Bold"/>
+                                    <Label TextColor="#B566FF" Text="{Binding Path=HighestSalary, StringFormat='do {0:N0} zł'}" FontSize="13" FontAttributes="Bold"/>
                                     <FlexLayout Wrap="Wrap">
                                         <Label Opacity="0.8">
                                             <Label.Text>
