--- a/Vistaaa/Views/HomePage.xaml
+++ b/Vistaaa/Views/HomePage.xaml
@@ -151,18 +151,47 @@
                     </VerticalStackLayout>
                 </Border>
             </AbsoluteLayout>
-            <Image HeightRequest="200" Source="employer.jpg" HorizontalOptions="Center">
-                <Image.Clip>
-                    <EllipseGeometry Center="100, 100"
-                         RadiusX="80"
-                         RadiusY="80" />
-                </Image.Clip>
-                <Image.Shadow>
-                    <Shadow Brush="#555"
-                Offset="10,10"
-                Opacity="0.8" />
-                </Image.Shadow>
-            </Image>
+            <Grid Padding="30">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <VerticalStackLayout>
+                    <Label FontFamily="FAB" FontSize="35" Text="&#xf17b; &#xf179; &#xf17a;"/>
+                    <Border>
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="45"/>
+                        </Border.StrokeShape>
+                        <Grid BackgroundColor="White">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Label FontFamily="SignikaNegative" Text="test" FontSize="30" Padding="15" TextColor="Gray" x:Name="searchAnimationLabel"/>
+                            <Border Grid.Column="1" StrokeThickness="0">
+                                <Border.StrokeShape>
+                                    <RoundRectangle CornerRadius="45"/>
+                                </Border.StrokeShape>
+                                <Button Clicked="Button_Clicked" FontFamily="SignikaNegative" FontAttributes="Bold" BackgroundColor="SeaGreen" TextColor="White" Text="Wyszukaj" FontSize="25" Padding="25, 0"/>
+                            </Border>
+                        </Grid>
+                    </Border>
+                </VerticalStackLayout>
+                <AbsoluteLayout Grid.Column="1">
+                    <Image HeightRequest="200" Source="employer.jpg" HorizontalOptions="Center" ZIndex="2">
+                        <Image.Clip>
+                            <EllipseGeometry Center="100, 100"
+                             RadiusX="80"
+                             RadiusY="80" />
+                        </Image.Clip>
+                    </Image>
+                    <Ellipse Margin="20" HeightRequest="160" Fill="SeaGreen" WidthRequest="160" HorizontalOptions="Center" VerticalOptions="Center" >
+                        <Ellipse.Shadow>
+                            <Shadow Brush="#555" Offset="7, 7" Opacity="0.6" />
+                        </Ellipse.Shadow>
+                    </Ellipse>
+                </AbsoluteLayout>
+            </Grid>
         </VerticalStackLayout>
 
     </ScrollView>
