--- a/Vistaaa/Views/HomePage.xaml
+++ b/Vistaaa/Views/HomePage.xaml
@@ -151,13 +151,68 @@
                     </VerticalStackLayout>
                 </Border>
             </AbsoluteLayout>
-            <Grid Padding="30">
+            <Grid Padding="30" RowSpacing="30">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
-                <VerticalStackLayout>
-                    <Label FontFamily="FAB" FontSize="35" Text="&#xf17b; &#xf179; &#xf17a;"/>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <VerticalStackLayout Spacing="20">
+                    <Label FontFamily="SignikaNegative" Text="Jesteśmy dostępni na systemach:" FontAttributes="Bold" FontSize="28" TextColor="DodgerBlue"/>
+                    <VerticalStackLayout Spacing="10">
+                        <Label LineBreakMode="WordWrap">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span FontFamily="FAB" FontSize="25" Text="&#xf17a; "/>
+                                    <Span FontFamily="SignikaNegative" FontSize="20" Text="Windows 10 21H2 i nowszych, Windows 11"/>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                        <Label LineBreakMode="WordWrap">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span FontFamily="FAB" FontSize="25" Text="&#xf179; "/>
+                                    <Span FontFamily="SignikaNegative" FontSize="20" Text="macOS 10.15 Catalina i nowszych"/>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                        <Label LineBreakMode="WordWrap">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span FontFamily="FAB" FontSize="25" Text="&#xf179; "/>
+                                    <Span FontFamily="SignikaNegative" FontSize="20" Text="iOS 10 i nowszych"/>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                        <Label LineBreakMode="WordWrap">
+                            <Label.FormattedText>
+                                <FormattedString>
+                                    <Span FontFamily="FAB" FontSize="25" Text="&#xf17b; "/>
+                                    <Span FontFamily="SignikaNegative" FontSize="20" Text="Android 5.0 Lollipop i nowszych"/>
+                                </FormattedString>
+                            </Label.FormattedText>
+                        </Label>
+                    </VerticalStackLayout>
+                </VerticalStackLayout>
+                <AbsoluteLayout Grid.Column="1">
+                    <Image HeightRequest="200" Source="employer.jpg" HorizontalOptions="Center" ZIndex="2">
+                        <Image.Clip>
+                            <EllipseGeometry Center="100, 100"
+                             RadiusX="80"
+                             RadiusY="80" />
+                        </Image.Clip>
+                    </Image>
+                    <Ellipse Margin="20" HeightRequest="160" Fill="SeaGreen" WidthRequest="160" HorizontalOptions="Center" VerticalOptions="Center" >
+                        <Ellipse.Shadow>
+                            <Shadow Brush="#555" Offset="7, 7" Opacity="0.6" />
+                        </Ellipse.Shadow>
+                    </Ellipse>
+                </AbsoluteLayout>
+                <VerticalStackLayout Grid.Row="1" Grid.ColumnSpan="2" Spacing="10">
+                    <Label FontFamily="SignikaNegative" Text="Znajdź dla siebie wymarzoną pracę!" FontAttributes="Bold" FontSize="28" TextColor="White"/>
                     <Border>
                         <Border.StrokeShape>
                             <RoundRectangle CornerRadius="45"/>
@@ -177,22 +232,7 @@
                         </Grid>
                     </Border>
                 </VerticalStackLayout>
-                <AbsoluteLayout Grid.Column="1">
-                    <Image HeightRequest="200" Source="employer.jpg" HorizontalOptions="Center" ZIndex="2">
-                        <Image.Clip>
-                            <EllipseGeometry Center="100, 100"
-                             RadiusX="80"
-                             RadiusY="80" />
-                        </Image.Clip>
-                    </Image>
-                    <Ellipse Margin="20" HeightRequest="160" Fill="SeaGreen" WidthRequest="160" HorizontalOptions="Center" VerticalOptions="Center" >
-                        <Ellipse.Shadow>
-                            <Shadow Brush="#555" Offset="7, 7" Opacity="0.6" />
-                        </Ellipse.Shadow>
-                    </Ellipse>
-                </AbsoluteLayout>
             </Grid>
         </VerticalStackLayout>
-
     </ScrollView>
 </ContentPage>
