--- a/Vistaaa/Views/AdvertisementPage.xaml
+++ b/Vistaaa/Views/AdvertisementPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Microsoft.Maui.Controls.Maps;assembly=Microsoft.Maui.Controls.Maps"
              x:Class="Vistaaa.Views.AdvertisementPage"
              Title="Szczegóły ogłoszenia">
     <Grid>
@@ -10,8 +11,11 @@
         </Grid.RowDefinitions>
         <ScrollView>
             <VerticalStackLayout>
-                <VerticalStackLayout HeightRequest="250" BackgroundColor="Gray" />
-                <VerticalStackLayout MaximumWidthRequest="1200" Padding="15" TranslationY="-50">
+                <Grid HeightRequest="250" BackgroundColor="Gray">
+                    <maps:Map/>
+                    <!--http://schemas.microsoft.com/dotnet/2021/maui/maps;-->
+                </Grid>
+                <VerticalStackLayout MaximumWidthRequest="1200" Padding="15" TranslationY="-25">
                     <Border StrokeThickness="0" BackgroundColor="#663399" Padding="15" >
                         <Border.StrokeShape>
                             <RoundRectangle CornerRadius="15"/>
