--- a/Vistaaa/Views/ProfilePage.xaml
+++ b/Vistaaa/Views/ProfilePage.xaml
@@ -3,13 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Vistaaa.Views.ProfilePage"
              Title="Profil">
-    <Grid>
+    <Grid x:Name="profilePage">
         <VerticalStackLayout HorizontalOptions="Center" VerticalOptions="Center" Spacing="20" MaximumWidthRequest="300">
             <Label Text="Witaj w Vistaaa! Wygląda na to, że nie jesteś zalogowany." HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="20"/>
             <Label Text="Zaloguj się, by móc w pełni korzystać z systemu Vistaaa."/>
-            <Button Text="Zaloguj się" Clicked="Button_Clicked"/>
+            <Button Text="Zaloguj się" Clicked="LoginButton_Clicked"/>
             <Label Text="Nie masz jeszcze konta? Zarejestruj się za darmo."/>
-            <Button Text="Zarejestruj się"/>
+            <Button Text="Zarejestruj się" Clicked="RegistrationButton_Clicked"/>
         </VerticalStackLayout>
     </Grid>
 </ContentPage>
