--- a/Vistaaa/Views/AddOrEditAdvertisement.xaml
+++ b/Vistaaa/Views/AddOrEditAdvertisement.xaml
@@ -31,7 +31,7 @@
         <StackLayout Grid.Row="1" Padding="15">
             <FlexLayout JustifyContent="Center">
                 <Button FontFamily="SignikaNegative" Margin="0, 0, 10, 0" Text="Dodaj" FlexLayout.Shrink="1" FlexLayout.Basis="350" TextColor="White" FontAttributes="Bold" FontSize="18" CharacterSpacing="1" CornerRadius="20" BackgroundColor="SeaGreen"/>
-                <Button FontFamily="SignikaNegative" Margin="10, 0, 0, 0" Text="Anuluj" FlexLayout.Shrink="1" FlexLayout.Basis="350"  BackgroundColor="Transparent" BorderWidth="2" BorderColor="DarkRed" CornerRadius="20" TextColor="DarkRed" FontAttributes="Bold" FontSize="18" CharacterSpacing="1"/>
+                <Button FontFamily="SignikaNegative" Margin="10, 0, 0, 0" Text="Anuluj" FlexLayout.Shrink="1" FlexLayout.Basis="350"  BackgroundColor="Transparent" BorderWidth="2" BorderColor="DarkRed" CornerRadius="20" TextColor="DarkRed" FontAttributes="Bold" FontSize="18" CharacterSpacing="1" Clicked="CancelButton_Clicked"/>
             </FlexLayout>
         </StackLayout>
     </Grid>
