--- a/Vistaaa/MainPage.xaml
+++ b/Vistaaa/MainPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Vistaaa.MainPage" Title="Oferty pracy">
     <ScrollView x:Name="AdvertisementScrollView">
-        <VerticalStackLayout MaximumWidthRequest="1000"
+        <StackLayout MaximumWidthRequest="1000"
             Padding="10,0"
             Spacing="25">
             <SearchBar Placeholder="Wyszukaj" x:Name="searchBar" TextChanged="SearchBar_TextChanged" IsTextPredictionEnabled="True"/>
@@ -16,14 +16,28 @@
                     </Picker.Items>
                 </Picker>
             </HorizontalStackLayout>
-            
             <ActivityIndicator IsRunning="True" x:Name="loading" />
-            <!--<RefreshView RefreshColor="Yellow">-->
-                <CollectionView x:Name="AdvertisementCollectionView">
+            <RefreshView x:Name="refreshView" RefreshColor="#1E90FF">
+                <CollectionView x:Name="AdvertisementCollectionView" >
+                    <CollectionView.Header>
+                        <HorizontalStackLayout>
+                            <HorizontalStackLayout>
+                                <CheckBox/>
+                                <Label Text="Tylko ulubione" VerticalOptions="Center"/>
+                            </HorizontalStackLayout>
+                            <Button Text="Dodaj" Clicked="AddButton_Clicked"/>
+                            <Button Text="Usuń wszystkie (0)"/>
+                        </HorizontalStackLayout>
+                    </CollectionView.Header>
+                    <CollectionView.EmptyView>
+                        <VerticalStackLayout x:Name="emptyCollectionViewPlaceholder" IsVisible="False">
+                            <Label Text="Nie znaleziono ofert pasujących do podanych warunków." HorizontalOptions="Center" FontSize="20" FontAttributes="Bold" FontFamily="SignikaNegative"/>
+                        </VerticalStackLayout>
+                    </CollectionView.EmptyView>
                     <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout>
-                            <Border HeightRequest="30" Padding="10, 5" BackgroundColor="SeaGreen" StrokeThickness="0" TranslationX="-10" HorizontalOptions="End" ZIndex="999">
+                            <Border IsEnabled="{Binding IsUpToDate}" HeightRequest="30" Padding="10, 5" BackgroundColor="SeaGreen" StrokeThickness="0" TranslationX="-10" HorizontalOptions="End" ZIndex="999">
                                 <Border.StrokeShape>
                                     <RoundRectangle CornerRadius="15"/>
                                 </Border.StrokeShape>
@@ -34,7 +48,8 @@
                                     <RoundRectangle CornerRadius="10"/>
                                 </Border.StrokeShape>
                                 <StackLayout Margin="10, 5" >
-                                    <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold" Margin="0, 10, 0, 0"/>
+                                    <Label Text="{Binding CategoryName}" Margin="0, 15, 0, 0" FontSize="12" FontAttributes="Bold" TextColor="Gray" Opacity="0.9"/>
+                                    <Label Text="{Binding Title}" FontSize="17" FontAttributes="Bold"/>
                                     <Label Text="{Binding Path=CompanyName, StringFormat='przez: {0}'}" FontSize="13" FontAttributes="Bold"/>
                                     <Label TextColor="#B566FF" Text="{Binding Path=HighestSalary, StringFormat='do {0:N0} zł'}" FontSize="13" FontAttributes="Bold"/>
                                     <FlexLayout Wrap="Wrap">
@@ -77,13 +92,15 @@
                         Span="2" VerticalItemSpacing="10" HorizontalItemSpacing="10" />
                     </CollectionView.ItemsLayout>
                 <CollectionView.Footer>
-                    <HorizontalStackLayout Spacing="10" x:Name="test" HorizontalOptions="Center">
-                        <Button x:Name="previousPageBtn" Clicked="PreviousPageButton_Clicked" Text="&lt;" ToolTipProperties.Text="Poprzednia strona"/>
-                        <Button x:Name="nextPageBtn" Clicked="NextPageButton_Clicked" Text="&gt;" ToolTipProperties.Text="Następna strona"/>
+                    <HorizontalStackLayout Spacing="10" x:Name="test" HorizontalOptions="Center" Margin="10">
+                        <Button x:Name="firstPageBtn" FontFamily="FAS" Clicked="FirstPageButton_Clicked"  Text="&#xf049;" ToolTipProperties.Text="Pierwsza strona"/>
+                        <Button x:Name="previousPageBtn" FontFamily="FAS" Clicked="PreviousPageButton_Clicked" Text="&#xf048;" ToolTipProperties.Text="Poprzednia strona"/>
+                        <Button x:Name="nextPageBtn" FontFamily="FAS" Clicked="NextPageButton_Clicked" Text="&#xf051;" ToolTipProperties.Text="Następna strona"/>
+                        <Button x:Name="lastPageBtn" FontFamily="FAS" Clicked="LastPageButton_Clicked" Text="&#xf050;" ToolTipProperties.Text="Ostatnia strona"/>
                     </HorizontalStackLayout>
                 </CollectionView.Footer>
             </CollectionView>
-            <!--</RefreshView>-->
-        </VerticalStackLayout>
+            </RefreshView>
+        </StackLayout>
     </ScrollView>
 </ContentPage>
