--- a/Vistaaa/Views/AdvertisementPage.xaml
+++ b/Vistaaa/Views/AdvertisementPage.xaml
@@ -12,7 +12,7 @@
         <ScrollView>
             <VerticalStackLayout>
                 <Grid HeightRequest="250" BackgroundColor="Gray">
-                    <maps:Map/>
+                    <maps:Map x:Name="map"/>
                     <!--http://schemas.microsoft.com/dotnet/2021/maui/maps;-->
                 </Grid>
                 <VerticalStackLayout MaximumWidthRequest="1200" Padding="15" TranslationY="-25">
